use mongoDB Atlas in this code

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=8000
-MONGO_URL=mongodb://localhost:27017/innovixusData
+ATLASDB_URL=mongodb+srv://Innovixus_Website:WgUAOTWU0HR3mWcn@cluster0.btdzt.mongodb.net/innovixusData?retryWrites=true&w=majority
 ADMINSECRET_KEY=Innovixus@123
+
+
