done final changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=8000
 ATLASDB_URL=mongodb+srv://Innovixus_Website:WgUAOTWU0HR3mWcn@cluster0.btdzt.mongodb.net/innovixusData?retryWrites=true&w=majority
-ADMINSECRET_KEY=Innovixus@123
+ADMINSECRET_KEY=ATV@0611
 
 
