--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ CLOUDINARY_CLOUD_NAME=dtifdc6dw
 CLOUDINARY_API_KEY=222386473411871
 CLOUDINARY_API_SECRET=KcBzEIYkNkGE4m23FSbANxh7zaQ
 
+# Allowed Frontend URL for CORS
+CLIENT_URLS=http://localhost:5173,https://innovixus-frontend.onrender.com
